Wrap long URL’s. Potential fix for #9.

--- a/wimleers_v2/css/screen.scss
+++ b/wimleers_v2/css/screen.scss
@@ -874,6 +874,12 @@ section.writings
 {
 	padding: 35px 0 7px;
 
+	a {
+		white-space: pre-wrap;      /* CSS 2.1 */
+		white-space: pre-line;      /* CSS 3.0 */
+		word-wrap: break-word;
+	}
+
 	.user-picture
 	{
 		float: left;
